--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ./modules:/var/www/html/sites/default/modules
       - ./themes:/var/www/html/sites/default/themes
       - ./info.php:/var/www/html/info.php
+      - ./php.ini:/usr/local/etc/php/php.ini
     restart: always
 
   postgres:
